cmake_minimum_required(VERSION 3.27)
project(Assignment)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assignment main.cpp
        User.cpp
        User.h
        Customer.cpp
        Customer.h
        Author.h
        Author.cpp
        Publisher.h
        Publisher.cpp
        Book.cpp
        Book.h
        Admin.cpp
        Admin.h
        Admin.h
        Admin.cpp
        Contract.cpp
        Contract.h


)
